made footer mobile responsive, adjusted color, put footer on home page and adjusted position so that it is fixed at the bottom, removed width of chatwidget's container so that it doesn't block clicking of social media links. added some padding to the bottom of pageContainer bc there was issues with the footer positioning being stacked right below content. changed contact page so that it would align at the top rather than center.

--- a/src/ChatWidget.css
+++ b/src/ChatWidget.css
@@ -53,8 +53,10 @@
   display: flex;
   justify-content: right;
   bottom: calc(2 * var(--rem));
-  width: 99%;
+  right: 0;
+  /* width: 99%; */
   z-index: 1001;
+  /* border: 2px solid red; */
 }
 
 .messageBubble {
@@ -162,7 +164,6 @@
   display: flex;
   flex-direction: column;
   align-items: right;
-  backdrop-filter: blur(0.5px);
 }
 
 .chat-widget-item {
