--- a/src/layout2.css
+++ b/src/layout2.css
@@ -173,15 +173,15 @@
 .footer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   /* align-items: left; */
   background-color: var(--lighter-green);
-  color: var(--darkest-green);
+  background-color: var(--darker-green);
   color: white;
-  padding: calc(1 * var(--rem)) calc(2 * var(--rem));
-  position: static;
+  /* padding: calc(1 * var(--rem)) calc(2 * var(--rem)); */
+  position: absolute;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   /* max-width: 100vw; */
   opacity: 0.9;
   z-index: 1000;
@@ -195,7 +195,8 @@
   justify-content: space-between;
   align-items: center;
   /* border-bottom: 0.5px solid rgba(255, 255, 255, 0.497); */
-  padding: 30px 0;
+  /* padding: 30px 0; */
+  padding: 5px 10px 0 10px;
   width: 100%;
   /* border: 1px solid black; */
 }
@@ -262,7 +263,8 @@
   display: flex;
   flex-direction: row;
   /* border: 2px solid red; */
-  padding: 20px 0px;
+  padding: 0px 0px 5px 0;
+  justify-content: center;
 }
 
 .footerSocialMedia {
@@ -274,12 +276,11 @@
   align-items: center;
   column-gap: 10px;
 }
-
 .footerSocialMediaIcon img {
   height: 30px;
   width: 30px;
+  cursor: pointer;
 }
-
 .footerPrivacyPractices {
   flex: 2;
   display: flex;
@@ -413,6 +414,23 @@
     background-color: #ddd;
   }
 
+  .footerTop {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footerNameAddy {
+    display: none;
+  }
+  .footerContactInfo {
+    display: none;
+  }
+
+  /* .footerSocialMediaIcon img {
+    height: 20px;
+    width: 20px;
+  } */
+
   /* .footer ul {
     flex-direction: column;
     align-items: center;
@@ -480,6 +498,22 @@
 
   .dropdown-item:hover {
     background-color: #ddd;
+  }
+  .footerTop {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footerNameAddy {
+    display: none;
+  }
+  .footerContactInfo {
+    display: none;
+  }
+
+  .footerSocialMediaIcon img {
+    height: 20px;
+    width: 20px;
   }
 
   /* .footer ul {
